Fix spacing in responsive sizes

--- a/src/components/AboutContent/AboutContent.css
+++ b/src/components/AboutContent/AboutContent.css
@@ -1,7 +1,7 @@
 .about-content {
     display: flex;
     gap: var(--space-150);
-    margin-top: var(--space-84);
+    margin-top: var(--space-48);
 }
 
 .about-right {
